[gd_scene load_steps=24 format=2]

[ext_resource path="res://Plot/Images/PlotDry.png" type="Texture" id=1]
[ext_resource path="res://Plot/Images/Plant1.png" type="Texture" id=2]
[ext_resource path="res://Plot/Images/Plant4.png" type="Texture" id=3]
[ext_resource path="res://Plot/Images/Plant3.png" type="Texture" id=4]
[ext_resource path="res://Plot/Menu/Plot.gd" type="Script" id=5]
[ext_resource path="res://Plot/Menu/MenuBalk.png" type="Texture" id=6]
[ext_resource path="res://Plot/Menu/MenuIcon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/brandnetel..png" type="Texture" id=8]
[ext_resource path="res://Plot/Images/PlotWet.png" type="Texture" id=9]
[ext_resource path="res://Plot/Images/Plant2.png" type="Texture" id=10]
[ext_resource path="res://Plot/Images/Plant5.png" type="Texture" id=11]
[ext_resource path="res://Plot/Images/WateringCan.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "PlotDry"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "PlotSoaked"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/PlotSoakedBemest.png-f9819f580d0dc47a53b5ce8e58b1266b.stex"

[sub_resource type="Animation" id=3]
resource_name = "PlotSoakedBemest"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 11 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Stage1"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Stage2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Stage3"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Stage4"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Stage5"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 995.084, 900 ), Vector2( 995.084, 1221.48 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 995.084, 1221.47 ), Vector2( 995.084, 900 ) ]
}

[node name="Plot" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 981.306, 386.061 )
texture = ExtResource( 1 )

[node name="PlotButton" type="LinkButton" parent="Sprite"]
margin_left = -127.0
margin_right = 127.0
margin_bottom = 257.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageLabel" type="Label" parent="Sprite"]
margin_left = -219.622
margin_top = 259.935
margin_right = 201.378
margin_bottom = 427.936
text = "Stage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "PlotDry"
anims/PlotDry = SubResource( 1 )
anims/PlotSoaked = SubResource( 2 )
anims/PlotSoakedBemest = SubResource( 3 )

[node name="WateringCan" type="Sprite" parent="Sprite"]
texture = ExtResource( 12 )

[node name="Plant" type="Sprite" parent="."]
position = Vector2( 981.306, 386.061 )
texture = ExtResource( 2 )

[node name="PlantAnimationPlayer" type="AnimationPlayer" parent="Plant"]
anims/Stage1 = SubResource( 4 )
anims/Stage2 = SubResource( 5 )
anims/Stage3 = SubResource( 6 )
anims/Stage4 = SubResource( 12 )
anims/Stage5 = SubResource( 13 )

[node name="PlotMenu" type="Sprite" parent="."]
position = Vector2( 995.084, 1221.47 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="PlotMenu"]
position = Vector2( -349.723, 0.485291 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="PlotMenu/Sprite"]
position = Vector2( -2.69702, 19.4779 )
scale = Vector2( 0.346738, 0.346738 )
texture = ExtResource( 8 )

[node name="MenuButton1" type="LinkButton" parent="PlotMenu/Sprite"]
margin_left = -93.0
margin_top = -91.0
margin_right = 93.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="PlotMenu"]
anims/MenuHide = SubResource( 7 )
anims/MenuShow = SubResource( 8 )
[connection signal="pressed" from="Sprite/PlotButton" to="." method="_on_PlotButton_pressed"]
[connection signal="pressed" from="PlotMenu/Sprite/MenuButton1" to="." method="_on_MenuButton1_pressed"]
